deploy: abtttao/portfolio@0dde6a0fbac3aa1a3b5680d71f9b2d47facf82b3

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#services">Experience</a>
       <a href="#skills">Skills</a>
       <a href="#education">Education</a>
-      <a href="#contact">Contact</a>
+      <a href="#footer">Contact</a>
     </nav>
   </header>
 
@@ -44,7 +44,8 @@
         <a href="https://www.facebook.com/abtttao" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.instagram.com/abtttao/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       </div>
-      <a href="https://drive.google.com/file/d/1lwQJ1F1UDbwtVRTRZLY8BqfaV4DAvkS_/view?usp=sharing" target="_blank" class="btn">Hire Me</a>
+      <a href="https://drive.google.com/file/d/1lwQJ1F1UDbwtVRTRZLY8BqfaV4DAvkS_/view?usp=sharing" target="_blank"
+        class="btn">Hire Me</a>
     </div>
   </section>
   <section class="services" id="services">
@@ -55,13 +56,13 @@
         <div class="service-info">
           <h4>QA Engineer, CP-Axtra Co., Ltd (Lotus's)</h4>
           <ul>
-            <li>Develop test plans, test cases and perform test execution.</li>
-            <li>Prepare test data, mocks and stubs required.</li>
-            <li>UI testing, API testing and Performance testing.</li>
-            <li>Implement test scripts to perform automated tests with Cypress.</li>
-            <li>Analyze automate test results and prepare test report.</li>
-            <li>Analyze test output and identify the defects.</li>
-            <li>Log and track bugs in the system and report to developer engineers.</li>
+            <li>Create and maintain test plans, test cases, and test data for the Invoice/Receipt system integrated with
+              ERP.</li>
+            <li>Execute system integration testing (SIT) and user acceptance testing (UAT) with users.</li>
+            <li>Coordinate with users and developers to report and resolve bugs.</li>
+            <li>Maintain and update automated test scripts using Selenium.</li>
+            <li>Summarize and report test results, defects, and risks to the team.</li>
+            <li>Track and communicate testing progress to stakeholders.</li>
           </ul>
         </div>
       </div>
@@ -84,10 +85,9 @@
           <h4>Software Tester (Manual), EdVISORY Co., Ltd</h4>
           <ul>
             <li>Review software requirements and prepare action plans and test scenarios.</li>
-            <li>Executing tests on software UI testing and API testing.</li>
+            <li>Perform UI and API testing across multiple devices and browsers.</li>
             <li>Analyzing test results on database impacts, errors or bugs, and usability.</li>
             <li>Preparing bugs reports to the design and developer team.</li>
-            <li>Devices Testing and Browsers iPhone/Smartphone, Laptop/MacBook, iPad.</li>
             <li>Interacting and presentation with clients for User Acceptance Tests.</li>
             <li>Automation Testing using Cypress for reduce process.</li>
           </ul>
@@ -97,9 +97,11 @@
         <div class="service-info">
           <h4>Front-end Developer (Internship), Summit Computer Co., Ltd</h4>
           <ul>
-            <li>Front-end developer (XHTML/JSF PrimeFaces).</li>
-            <li>Documentation and Support.</li>
-            <li>UX/UI Design.</li>
+            <li>Plan and manage work schedules</li>
+            <li>Front-end developer (XHTML/JSF PrimeFaces/Eclipse IDE/Apache Tomcat).</li>
+            <li>Perform preliminary testing on programs before handing them over to system testers.</li>
+            <li>Participate in UX/UI redesign to improve system usability and user experience.</li>
+            <li>Prepare and support documentation.</li>
           </ul>
         </div>
       </div>
@@ -111,7 +113,7 @@
     <div class="services-container">
       <div class="service-box">
         <div class="service-info">
-          <h4>Front-End Developer, Senior project</h4>
+          <h4>Front-End Developer, (Senior project)</h4>
           <ul>
             <li>Thesis on "Elder Eat” Mobile application for the elderly to control and recommend healthy food.</li>
             <li>Research and Get requiremnt.</li>
@@ -125,7 +127,7 @@
       </div>
       <div class="service-box">
         <div class="service-info">
-          <h4>Front-End Developer, School of Information Technology (MFU)</h4>
+          <h4>Front-End Developer, (Part-time) School of Information Technology MFU</h4>
           <ul>
             <li>Get requiremnt from users.</li>
             <li>Design UX/UI website</li>
@@ -336,7 +338,7 @@
     </form>
   </section> -->
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="social">
       <a href="https://www.linkedin.com/in/anuwat-bunrueang-6aa35b24a/" target="_blank"><i
           class="fa-brands fa-linkedin"></i></a>
